--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
     "react-player": "^2.16.0"
   },
   "devDependencies": {
