--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "next": "14.2.2",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "swiper": "10.3.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
